--- a/mod01_review.ipynb
+++ b/mod01_review.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "b568e1f7",
    "metadata": {},
    "outputs": [
@@ -250,7 +250,7 @@
        "[400 rows x 11 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "a4c1aba7",
    "metadata": {},
    "outputs": [
@@ -284,7 +284,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,11 +303,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c58526a0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Income       float64\n",
+       "Limit          int64\n",
+       "Rating         int64\n",
+       "Cards          int64\n",
+       "Age            int64\n",
+       "Education      int64\n",
+       "Own           object\n",
+       "Student       object\n",
+       "Married       object\n",
+       "Region        object\n",
+       "Balance        int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Credit.dtypes"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -319,32 +343,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "27ba0f36",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Age: 55.6675\n"
+     ]
+    }
+   ],
    "source": [
-    "# mean"
+    "# mean\n",
+    "mean_age = Credit['Age'].mean()\n",
+    "print(\"Mean Age:\", Credit['Age'].mean())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "7632855f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Median Age: 56.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# median"
+    "# median\n",
+    "median_age = Credit['Age'].median()\n",
+    "print(\"Median Age:\", Credit['Age'].median())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "4806a30d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mode Age: 44\n"
+     ]
+    }
+   ],
    "source": [
-    "# mode"
+    "# mode\n",
+    "mode_age = Credit['Age'].mode()\n",
+    "print(\"Mode Age:\", Credit['Age'].mode().iloc[0])"
    ]
   },
   {
@@ -357,12 +411,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "58123002",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Subset = "
+    "Subset = Credit[['Age', 'Region', 'Income']]"
    ]
   },
   {
@@ -377,22 +431,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "0bc1b835",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Younger = "
+    "Younger = Subset[Subset['Age'] < 50]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "6e7c6740",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Older = "
+    "Older = Subset[Subset['Age'] >= 50]"
    ]
   },
   {
@@ -405,42 +459,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "a0492480",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Income (Younger): 41.65203726708074\n"
+     ]
+    }
+   ],
    "source": [
-    "# mean of younger"
+    "# mean of younger\n",
+    "print(\"Mean Income (Younger):\", Younger['Income'].mean())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "06057f97",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Income (Older): 47.6216569037657\n"
+     ]
+    }
+   ],
    "source": [
-    "# mean of older"
+    "# mean of older\n",
+    "print(\"Mean Income (Older):\", Older['Income'].mean())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "38678f7c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Median Income (Younger): 31.861\n"
+     ]
+    }
+   ],
    "source": [
-    "# median of younger"
+    "# median of younger\n",
+    "print(\"Median Income (Younger):\", Younger['Income'].median())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "b7bc82dd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Median Income (Older): 33.694\n"
+     ]
+    }
+   ],
    "source": [
-    "# median of older"
+    "# median of older\n",
+    "print(\"Median Income (Older):\", Older['Income'].median())\n"
    ]
   },
   {
@@ -452,11 +542,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "896e300a",
    "metadata": {},
    "source": [
-    "Type your answer here."
+    "The difference between the mean and median income shows that incomes are not evenly spread out. The mean is affected by very high incomes, while the median is not. Because the mean is higher than the median, it shows us that a few people earn much more than everyone else, which brings the average up. This means the income distribution is skewed to the right, where most people are earning less than the average income."
    ]
   },
   {
@@ -469,11 +560,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "d2954498",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['South', 'West', 'East'], dtype=object)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Credit['Region'].unique()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -485,11 +589,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "308f0c5b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Region\n",
+       "South    199\n",
+       "West     102\n",
+       "East      99\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Credit['Region'].value_counts()\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -501,11 +622,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "3bfc07c3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Student\n",
+       "No     44.988533\n",
+       "Yes    47.292050\n",
+       "Name: Income, dtype: float64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Credit.groupby('Student')['Income'].mean()\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -543,19 +680,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "65cbe997",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Credit['Utilization'] = Credit['Balance'] / Credit['Limit']\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "d98dcbc9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Balance</th>\n",
+       "      <th>Limit</th>\n",
+       "      <th>Utilization</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>333</td>\n",
+       "      <td>3606</td>\n",
+       "      <td>0.092346</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>903</td>\n",
+       "      <td>6645</td>\n",
+       "      <td>0.135892</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>580</td>\n",
+       "      <td>7075</td>\n",
+       "      <td>0.081979</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>964</td>\n",
+       "      <td>9504</td>\n",
+       "      <td>0.101431</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>331</td>\n",
+       "      <td>4897</td>\n",
+       "      <td>0.067592</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Balance  Limit  Utilization\n",
+       "0      333   3606     0.092346\n",
+       "1      903   6645     0.135892\n",
+       "2      580   7075     0.081979\n",
+       "3      964   9504     0.101431\n",
+       "4      331   4897     0.067592"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Credit[['Balance', 'Limit', 'Utilization']].head()\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -567,8 +783,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "58512879",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.27693008426326576)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Credit['Utilization'].max()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7270605",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "465933fe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c0596af",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e27507ea",
    "metadata": {},
    "outputs": [],
    "source": []
