--- a/mod05_nonlinear.ipynb
+++ b/mod05_nonlinear.ipynb
@@ -1343,7 +1343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 185,
    "id": "953ac193",
    "metadata": {},
    "outputs": [
@@ -1377,51 +1377,79 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>intercept</th>\n",
-       "      <td>58.2683</td>\n",
-       "      <td>5.243</td>\n",
-       "      <td>11.114</td>\n",
+       "      <td>-76.9212</td>\n",
+       "      <td>10.737</td>\n",
+       "      <td>-7.164</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>temp</th>\n",
-       "      <td>239.1883</td>\n",
-       "      <td>5.397</td>\n",
-       "      <td>44.315</td>\n",
+       "      <td>436.7192</td>\n",
+       "      <td>26.603</td>\n",
+       "      <td>16.416</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>temp2</th>\n",
+       "      <td>-201.4471</td>\n",
+       "      <td>26.811</td>\n",
+       "      <td>-7.514</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>hum</th>\n",
-       "      <td>-63.7596</td>\n",
-       "      <td>5.967</td>\n",
-       "      <td>-10.686</td>\n",
+       "      <td>306.6548</td>\n",
+       "      <td>29.808</td>\n",
+       "      <td>10.288</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>hum2</th>\n",
+       "      <td>-309.5429</td>\n",
+       "      <td>23.164</td>\n",
+       "      <td>-13.363</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>windspeed</th>\n",
-       "      <td>-72.0344</td>\n",
-       "      <td>8.739</td>\n",
-       "      <td>-8.243</td>\n",
+       "      <td>-71.7126</td>\n",
+       "      <td>8.440</td>\n",
+       "      <td>-8.497</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>hr_sin1</th>\n",
-       "      <td>-65.5675</td>\n",
-       "      <td>1.592</td>\n",
-       "      <td>-41.177</td>\n",
+       "      <td>-65.0475</td>\n",
+       "      <td>1.534</td>\n",
+       "      <td>-42.407</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>hr_cos1</th>\n",
-       "      <td>-54.5718</td>\n",
-       "      <td>1.592</td>\n",
-       "      <td>-34.274</td>\n",
+       "      <td>-56.9529</td>\n",
+       "      <td>1.535</td>\n",
+       "      <td>-37.091</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>hr_sin2</th>\n",
+       "      <td>-19.9843</td>\n",
+       "      <td>1.439</td>\n",
+       "      <td>-13.886</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>hr_cos2</th>\n",
+       "      <td>-17.1077</td>\n",
+       "      <td>1.650</td>\n",
+       "      <td>-10.369</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>rushhour</th>\n",
-       "      <td>139.3152</td>\n",
-       "      <td>2.847</td>\n",
-       "      <td>48.932</td>\n",
+       "      <td>116.7759</td>\n",
+       "      <td>3.224</td>\n",
+       "      <td>36.216</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1430,16 +1458,20 @@
       ],
       "text/plain": [
        "               coef  std err       t  P>|t|\n",
-       "intercept   58.2683    5.243  11.114    0.0\n",
-       "temp       239.1883    5.397  44.315    0.0\n",
-       "hum        -63.7596    5.967 -10.686    0.0\n",
-       "windspeed  -72.0344    8.739  -8.243    0.0\n",
-       "hr_sin1    -65.5675    1.592 -41.177    0.0\n",
-       "hr_cos1    -54.5718    1.592 -34.274    0.0\n",
-       "rushhour   139.3152    2.847  48.932    0.0"
+       "intercept  -76.9212   10.737  -7.164    0.0\n",
+       "temp       436.7192   26.603  16.416    0.0\n",
+       "temp2     -201.4471   26.811  -7.514    0.0\n",
+       "hum        306.6548   29.808  10.288    0.0\n",
+       "hum2      -309.5429   23.164 -13.363    0.0\n",
+       "windspeed  -71.7126    8.440  -8.497    0.0\n",
+       "hr_sin1    -65.0475    1.534 -42.407    0.0\n",
+       "hr_cos1    -56.9529    1.535 -37.091    0.0\n",
+       "hr_sin2    -19.9843    1.439 -13.886    0.0\n",
+       "hr_cos2    -17.1077    1.650 -10.369    0.0\n",
+       "rushhour   116.7759    3.224  36.216    0.0"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1448,17 +1480,16 @@
     "# Build your linear regression model here.\n",
     "vars_to_include = [\n",
     "    'intercept',\n",
-    "    'temp',\n",
-    "    'hum',\n",
+    "    'temp', 'temp2',\n",
+    "    'hum', 'hum2',\n",
     "    'windspeed',\n",
     "    'hr_sin1', 'hr_cos1',\n",
+    "    'hr_sin2', 'hr_cos2',\n",
     "    'rushhour'\n",
     "]\n",
     "\n",
-    "# Keep only columns that exist (safety)\n",
     "vars_to_include = [c for c in vars_to_include if c in X_train.columns]\n",
     "\n",
-    "# Force numeric float matrices for statsmodels\n",
     "Xtr = X_train[vars_to_include].apply(pd.to_numeric, errors='coerce') \\\n",
     "                              .replace([np.inf, -np.inf], np.nan) \\\n",
     "                              .fillna(0.0) \\\n",
@@ -1475,7 +1506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 186,
    "id": "2c45071f",
    "metadata": {},
    "outputs": [
@@ -1483,8 +1514,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE train:  6951.268954014852\n",
-      "MSE test:  7184.630183512187\n"
+      "MSE train:  6413.522532828325\n",
+      "MSE test:  6697.077968849193\n"
      ]
     }
    ],
